--- a/style.css
+++ b/style.css
@@ -1,31 +1,34 @@
 *{
     margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
+    padding: 0;
+    font-family: sans-serif;
+    
 }
 
 body{
     background: #222;
 }
 .card{
-    width: 90%;
-    max-width: 470px;
-    background: linear-gradient(135deg, #a5fe00, #79548a );
-    color: #fff;
     margin: 100px auto 0;
-    border-radius: 20px;
+    border-radius: 20px; 
+    color: #fff;
     padding: 40px 35px;
+    background: linear-gradient(135deg, #a5fe00, #79548a );
+    width: 90%;
     text-align: center;
+    max-width: 470px;
 }
-.search{
+.searchCity{
+    align-items: center;
     width: 100%;
     display: flex;
-    align-items: center;
     justify-content: space-between;
+   
+   
 }
 
-.search input{
+.searchCity input{
     border: 0;
     outline: 0;
     background: #ebfffc;
@@ -37,22 +40,12 @@ body{
     margin-right: 16px;
     font-size: 18px;
 }
-.search button{
-    border: 0;
-    outline: 0;
-    background: #ebfffc;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    cursor: pointer;
 
-
-}
-.search button img{
+.searchCity button img{
     width: 16px; 
 
 }
-.weather-icon{
+.icon{
     width: 170px;
     margin-top: 30px;
 
@@ -70,7 +63,7 @@ body{
     margin-top: -20px;
 
 }
-.details{
+.weatherDetails{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -105,4 +98,17 @@ body{
     font-size: 14px;
     margin-top: 10px;
     display: none;
+}
+
+.searchCity button{
+    height: 60px;
+    cursor: pointer;
+    border: 0;
+    outline: 0;
+    background: #ebfffc;
+    border-radius: 50%;
+    width: 60px;
+    
+
+
 }
